--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = BCBP
-version = 0.1
+name = bcbp
+version = 0.3
 author = hattr
 description = A Python module to help decode IATA-standard boarding passes with barcodes.
 long_description = file: README.md
@@ -16,9 +16,9 @@ classifiers =
 
 [options]
 package_dir =
-    = src
+    = bcbp
 packages = find:
 python_requires = >=3.6
 
 [options.packages.find]
-where = src
+where = bcbp
